--- a/common/randseq_dsp.tex
+++ b/common/randseq_dsp.tex
@@ -3,10 +3,10 @@
 % Daniel J. Greenhoe
 %============================================================================
 %=======================================
-\chapter{Random Sequence DSP}
+\chapter{Operators on Random Sequences}
 %=======================================
 %=======================================
-\section{LTI filtering}
+\section{LTI operators on random sequences}
 %=======================================
 %---------------------------------------
 \begin{minipage}{\tw-50mm}
@@ -142,7 +142,7 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
 \end{proof}
 
 %=======================================
-\section{LTI filtering of WSS sequences}
+\section{LTI operators on WSS random sequences}
 %=======================================
 %---------------------------------------
 \begin{corollary}
@@ -155,8 +155,7 @@ Let $\opS$ be the system defined in \prefpp{thm:Rxyh}.
 \corbox{
   \brbr{\begin{array}{FMD}
       (A). & $\opS$    is \prope{LTI} & and
-    \\(B). & $\rvx(n)$ is \prope{WSS} & and
-    \\(C). & $\rvy(n)$ is \prope{WSS} &
+    \\(B). & $\rvx(n)$ is \prope{WSS} &
   \end{array}}
   \implies
   \brbl{\begin{array}{Frc>{\ds}lc>{\ds}lD}
@@ -370,6 +369,9 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
 \end{align*}
 \end{proof}
 
+%=======================================
+\section{Parallel operators on WSS random sequences}
+%=======================================
 %---------------------------------------
 \begin{minipage}{\tw-70mm}
 \begin{theorem}
@@ -389,10 +391,11 @@ Let $\opS$ be the \structe{system} illustrated to the right.
     \\    & \mc{3}{D}{(\fncte{impulse response})}
   \end{array}}
   \implies
-  \brb{\begin{array}{Frc>{\ds}l c>{\ds}lD}
-      (1).&\Rwy(m)       &=& \sum_{n\in\Z}\fh(n)\Rxy(m-n) &\eqd& \fh(m)\convd\Rxy(m) & and
-    \\(2).&\Szwy(z)      &=& \ZH(z)     \Szxy(z)          &    &                     & and
-    \\(3).&\Swwy(\omega) &=& \FH(\omega)\Swxy(\omega)     &    &                     &
+  \brb{\begin{array}{Frc>{\ds}lD}
+      (1).&\Rwy(m)       &=&    \sum_{n\in\Z}\fh(n)\Rxy(m-n) & (\ope{convolution})
+        \\&              &\eqd& \fh(m)\convd\Rxy(m)          & and
+    \\(2).&\Szwy(z)      &=&    \ZH(z)     \Szxy(z)          & and
+    \\(3).&\Swwy(\omega) &=&    \FH(\omega)\Swxy(\omega)     &
   \end{array}}
   }
 \\
@@ -428,7 +431,7 @@ Let $\opS$ be the \structe{system} illustrated to the right.
 \end{proof}
 
 %=======================================
-\section{Whitening}
+\section{Whitening operators on random sequences}
 \index{whitening filter}
 \label{sec:d-whiten}
 %=======================================
