csd of communications additive noise system

--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -709,7 +709,7 @@
   volume       = {23},
   pages        = {328--336},
   title        = {Single-image signal-to-noise ratio estimation},
-  author       = {J. C. H. Phang and K. S. Sim and J. C. H. Phang},
+  author       = {J. T. L. Thong and K. S. Sim and J. C. H. Phang},
   year         = {2001},
   month        = {December 07},
   url          = {https://doi.org/10.1002/sca.4950230506},
