measurement dual noise system

--- a/common/math/graphics/system/opT_mnoise.tex
+++ b/common/math/graphics/system/opT_mnoise.tex
@@ -19,7 +19,7 @@
   % |  H  |
   % |_____|
   %-------------------------------------
-  \fnodeput{0}{ 0}{ 0}{sysH}{$\opH$}%
+  \fnodeput{0}{ 0}{ 0}{sysH}{$\opT$}%
     %       |   |  |   |       |____ label in box
     %       |   |  |   |____________ node name
     %       |   |  |________________ y location
