--- a/common/randseq_addnoise.tex
+++ b/common/randseq_addnoise.tex
@@ -483,7 +483,6 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:sysT_addnoise} (C)
 \end{align*}
 \end{proof}
 
-
 %=======================================
 \section{Additive noise and LTI operators}
 %=======================================
@@ -545,8 +544,14 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:sysT_addnoise} (B)
 \end{enumerate}
 \end{proof}
 
+%What is $\Swxy(\omega)$ of a dual additive noise system when $\opH$ is \prope{LTI}?
+When $\opH$ is \prope{LTI},
+what effect does the additive uncorrelated noise sources have on the cross-statistical properties of $\rvx$ and $\rvy$?
+\pref{cor:sysH_cnoise} (next) demonstrates that, amazingly, under very general conditions, 
+the noise sources have \textbf{no effect}.
+
 %---------------------------------------
-\begin{minipage}{\tw-55mm}
+\begin{minipage}{\tw-75mm}
 \begin{corollary}
 \label{cor:sysH_cnoise}
 %---------------------------------------
@@ -566,7 +571,7 @@ Let $\opS$ be the \structe{system} illustrated to the right:
   \brb{\begin{array}{FrclD}
      %(1).& \Ryx(m)      &=& \fh(m)\conv\Rxx(m)       & and 
      %(2).& \Szyx(z)     &=& \ZH(z)     \Szxx(z)      & and
-      (1).& \Swxy(\omega)&=& \FH^\ast(\omega)\Swxx(\omega) &
+          & \Swxy(\omega)&=& \FH^\ast(\omega)\Swxx(\omega) &
   \end{array}}
   }
 \\
@@ -579,6 +584,47 @@ Let $\opS$ be the \structe{system} illustrated to the right:
     && \text{by \prefp{thm:sysH_addnoise_lti}}
 \end{align*}
 \end{proof}
+
+%---------------------------------------
+\begin{minipage}{\tw-75mm}
+\begin{corollary}
+\label{cor:sysH_cnoise}
+%---------------------------------------
+Let $\opS$ be the \structe{system} illustrated to the right:
+\end{corollary}
+\end{minipage}
+\qquad\tbox{\includegraphics{graphics/sysH_mnoise.pdf}}
+\corbox{
+  \brb{\begin{array}{FMMD}
+      (A).& $\rvx(n)$               is  & \prope{WSS}           & and
+    \\(B).& $\rvw(n)$               is  & \prope{zero-mean}     & and
+    \\(C).& $\rvv(n)$               is  & \prope{zero-mean}     & and
+    \\(D).& $\rvx(n)$, $\rvw(n)$, $\rvv(n)$ are & \prope{uncorrelated}  & and
+    \\(E).& $\opH$ is & \prope{LTI}
+  \end{array}}
+  \implies
+  \brb{\begin{array}{FrclD}
+     %(1).& \Ryx(m)      &=& \fh(m)\conv\Rxx(m)       & and 
+     %(2).& \Szyx(z)     &=& \ZH(z)     \Szxx(z)      & and
+          & \Swxy(\omega)&=& \FH^\ast(\omega)\brs{\Swxx(\omega)-\Swww(\omega)} &
+  \end{array}}
+  }
+\\
+\begin{proof}
+\begin{align*}
+  \Swyx(\omega)
+    &= \Swqx(\omega)
+    && \text{by \prefp{thm:sysT_addnoise_v}}
+  \\&= \Swqp(\omega)
+    && \text{by \prefp{thm:sysT_addnoise_v}}
+  \\&= \FH(\omega)\Swpp(\omega)
+    && \text{by \prefp{cor:Swxy}}
+  \\&= \FH(\omega)\brs{\Swxx(\omega)-\Swww(\omega)}
+    && \text{by \prefp{cor:xvy}}
+\end{align*}
+\end{proof}
+
+
 
 %=======================================
 \section{Additive noise and dual operators}
@@ -607,7 +653,7 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:opT_opH_noise} (A)
 %\hfill\tbox{\includegraphics{graphics/xGy_xHw_addnoise.pdf}}
 \corbox{
   \brb{\begin{array}{FMMD}
-      (A).& $\fg(n)$  is               &\prope{LTI}       & and
+      (A).& $\opH$  is                 &\prope{LTI}       & and
     \\(B).& $\rvx(n)$ is               &\prope{WSS}       & and
     \\(C).& $\rvu$ and $\rvv$ are      &\prope{zero-mean} & and
     \\(D).& $\rvx$, $\rvu$, $\rvv$ are &\mc{2}{D}{\prope{uncorrelated}}
@@ -628,20 +674,17 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:opT_opH_noise} (A)
   \\&= \ZH(z)\Szpq(z)
     && \text{by \prefp{thm:xGw_xHy}}
     && \text{and (A)}
-  \\&= \ZH(z)\brs{\Szxy(z) + \Szuy(z)}
+  \\&= \ZH(z)\brs{\Szxq(z) + \Szuq(z)}
     && \text{by \prefp{thm:sysT_addnoise_u}}
-    && \text{and (A)}
+  \\&= \ZH(z)\brs{\Szxy(z) + \Szuy(z)}
+    && \text{by \prefp{thm:sysT_addnoise_v}}
   \\
   \Swsy(\omega)
-    &= \Swrq(\omega)
-    && \text{by \prefp{cor:dual_addnoise}}
-    && \text{and (B), (C) and (D)}
-  \\&= \FH(\omega)\Swpq(\omega)
-    && \text{by \prefp{thm:xGw_xHy}}
-    && \text{and (A)}
+    &= \brlr{\Szsy(z)}_{z=e^{i\omega}}
+  \\&= \brlr{\ZH(z)\brs{\Szxy(z) + \Szuy(z)}}_{z=e^{i\omega}}
+    && \text{by previous result}
+    && \text{(1)}
   \\&= \FH(\omega)\brs{\Swxy(\omega) + \Swuy(\omega)}
-    && \text{by \prefp{thm:sysT_addnoise_u}}
-    && \text{and (A)}
 \end{align*}
 \end{proof}
 
@@ -654,7 +697,7 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:opT_opH_noise} (A)
 Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:opT_opH_noise} (B).
 \corbox{
   \brb{\begin{array}{FMMD}
-      (A).& $\fg(n)$  is               &\prope{LTI}       & and
+      (A).& $\opH$  is                 &\prope{LTI}       & and
     \\(B).& $\rvx(n)$ is               &\prope{WSS}       & and
     \\(C).& $\rvu$ and $\rvv$ are      &\prope{zero-mean} & and
     \\(D).& $\rvp$, $\rvu$, $\rvv$ are &\prope{uncorrelated}
@@ -675,9 +718,11 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:opT_opH_noise} (B)
   \\&= \ZH(z)\Szpq(z)
     && \text{by \prefp{thm:xGw_xHy}}
     && \text{and (A)}
+  \\&= \ZH(z)\brs{\Szxq(z) - \Szuq(z)}
+    && \text{by \prefp{thm:sysT_addnoise_u}}
   \\&= \ZH(z)\brs{\Szxy(z) - \Szuy(z)}
     && \text{by \prefp{thm:sysT_addnoise_u}}
-    && \text{and (A)}
+    && \text{by \prefp{thm:sysT_addnoise_v}}
   \\&= \ZH(z)\brs{\Szxy(z) - \cancelto{0}{\Szuy(z)}}
     && \text{by \prope{uncorrelated} hypothesis}
     && \text{and (C)}
