--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -747,12 +747,12 @@ But making the LTI assumption on $\fH$ yields some interesting and insightful
 results, such as those in this section.
 
 %---------------------------------------
-\begin{corollary}[Estimating H in communication additive noise system]
-\label{cor:estH1}
-\label{cor:estH2}
+\begin{theorem}[Estimating H in communication additive noise system]
+\label{thm:estH1_cnoise}
+\label{thm:estH2_cnoise}
 %---------------------------------------
 Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:addnoise} (A).
-\corboxt{
+\thmboxt{
   $\brb{\begin{array}{FMMD}
       (A).& $\fH$ is                                &\prope{linear time invariant} & and
     \\(B).& $\rvx(n)$ is                            &\prope{wide-sense stationary} & and
@@ -769,7 +769,7 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:addnoise} (A).
                            &
   \end{array}}$
   }
-\end{corollary}
+\end{theorem}
 \begin{proof}
 \begin{align*}
   \estH_1(\omega)
@@ -781,13 +781,26 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:addnoise} (A).
   \\&= \FH(\omega)
   \\
   \estH_2(\omega)
-    &\eqd \frac{\Swyy(\omega)}{\Swxy(\omega)}
+    &\eqd \frac{\Swyy(\omega)}
+               {\Swxy(\omega)}
     && \text{by definition of $\estH_2$}
     && \text{\xref{def:H2}}
-  \\&= \frac{\Swyy(\omega)}{\FH(\omega)\Swxx(\omega)}
-    && \text{by \prefp{thm:sysH_addnoise_lti}}
-  \\&= \frac{\FH(\omega)\FH^\ast(\omega)}{\FH(\omega)}
-  \\&= \FH(\omega)
+  \\&= \frac{\Swyy(\omega)}
+            {\FH^\ast(\omega)\Swxx(\omega)}
+    && \text{by \prefp{cor:sysH_cnoise}}
+  \\&= \frac{\Swvv(\omega)+\Swqq(\omega)}
+            {\FH^\ast(\omega)\Swxx(\omega)}
+    && \text{by \prefp{thm:xvy}}
+  \\&= \frac{\Swvv(\omega)+\FH^\ast(\omega)\FH(\omega)\Swpp(\omega)}
+            {\FH^\ast(\omega)\Swxx(\omega)}
+    && \text{by \prefp{cor:Swxy}}
+  \\&= \frac{\Swvv(\omega)}
+            {\FH^\ast(\omega)\Swxx(\omega)} 
+      +\frac{\FH^\ast(\omega)\FH(\omega)\brs{\Swxx(\omega)+\Swuu(\omega)}}
+            {\FH^\ast(\omega)\Swxx(\omega)}
+  \\&= \frac{\Swvv(\omega)}
+            {\FH^\ast(\omega)\Swxx(\omega)} 
+      +\FH(\omega)\brs{1 + \frac{\Swuu(\omega)}{\Swxx(\omega)}}
 \end{align*}
 \end{proof}
 
@@ -800,8 +813,8 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:addnoise} (A).
   \citePpc{mitchell1982}{277}{$\~H_1(f)=\ffrac{H_0(f)}{\brp{1+\ffrac{G_{nn}}{G_{uu}}}}$}
   \citePpc{mitchell1982}{278}{$\~H_2(f)=H_0(f)\brp{1+\ffrac{G_{mm}}{G_{vv}}}$}
   }
-\label{thm:estH1}
-\label{thm:estH2}
+\label{thm:estH1_mnoise}
+\label{thm:estH2_mnoise}
 %---------------------------------------
 Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:addnoise} (B).
 \thmboxt{
